--- a/univasset/scripts/header.html
+++ b/univasset/scripts/header.html
@@ -1,3 +1,5 @@
+<!-- Subtitle/Page description -->
+
 <header>
     <div class="container">
         <a id="a-title" href="/"><h1>Random Scraps</h1></a>
