--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -20,7 +20,9 @@
                 .then(html => {document.getElementsByTagName('tbody')[0].innerHTML = html});
         </script>
 
-        <meta charset='utf-8'>
+        <include src="/univasset/scripts/metahead.html"></include>
+
+        <!--meta charset='utf-8'-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
