--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -3,9 +3,7 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
 
-        <include src="/univasset/scripts/metahead.html"></include>
-
-        <!--meta charset='utf-8'-->
+        <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
