--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -3,22 +3,9 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script type="module">
-            import {zip, enumerate, getJSON} from '/univasset/scripts/externaljavascript.js';
+            import {AsyncFunc, zip, enumerate} from '/univasset/scripts/externaljavascript.js';
 
-            /* fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
-                .then(response => response.json())
-                .then(jsonObject => {
-                    var elite = new Set(), nonelite = new Set(), rows = "";
-                    
-                    for (const units of jsonObject)
-                        (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
-
-                    for (const [index, [unitE, unitNE]] of enumerate(zip(true, elite, nonelite)))
-                        rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
-
-                    return rows;})
-                .then(html => {document.getElementsByTagName('tbody')[0].innerHTML = html}); */
-            const jsonObject = await getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
+            const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
             var elite = new Set(), nonelite = new Set(), rows = "";
 
             for (const units of jsonObject)
