--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -135,6 +135,16 @@
 
                     <dt><a href="https://www.reddit.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0v36wf">u/pointblanksniper</a></dt>
                 </dl>
+
+                <a href="#focus" id="focus"><h1>What should I focus on as a beginner?</h1></a>
+                <ul>
+                    <li>2 ARSMG to help in clearing events, 2 RFHG for anti-armor, and 1 MGSG for special fights</li>
+                    <li>8 echelons, where 4 are in permanent logistics</li>
+                    <li>Forward Basecamp for passive CR and core income</li>
+                    <li>3-4 dorms for battery generation</li>
+                    <li>Intelligence Center for generating chips which will be the bottleneck for fully maxed HOCS</li>
+                    <li>Protocol Control Centre for the newbie-friendly units</li>
+                </ul>
             </section>
         </div>
     </body>
