--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -56,15 +56,19 @@
                 <p>For contents, the only permanently missable ones are mainly minigame cosmetics only. Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not gamebreaking).</p>
                 <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>
 
+                <a href="#engage" id="engage"><h1>How much daily engagement does this game need?</h1></a>
+                <p>Minimal. Resources for pulls are generated passively. Events are months apart aka big bursts in-between lulls (in comparison to usual mobages).</p>
+
                 <a href="#gacha" id="gacha"><h1>How is the gacha in this game?</h1></a>
                 <p>The only gacha in this game is cosmetics. Characters/Units/Dolls in this game do not go on a rotating banner, instead once they enter the "gacha pool", they're available permanently. In essence, this game is not a gacha game in terms of unit pulling.</p>
 
                 <a href="#reroll" id="reroll"><h1>Is it worth to reroll in this game?</h1></a>
-                <p>Depends on what you value more. If you want a pretty easy time until endgame, game already gives you free strong dolls as part of the newbie missions. Endgame? This is a game of accumulating various tools instead of just a select few meta characters due to the volatile meta shifts. Collab units? They're not gacha or rather, you're guaranteed to get them with a working team. So for the most part, the answer is no.</p>
+                <p>Depends on what you value more. If you want a pretty easy time until endgame, game already gives you free strong dolls as part of the newbie missions. Endgame? This is a game of accumulating various tools instead of just a select few meta characters due to the volatile meta shifts. Collab units? They're not gacha or rather, you're guaranteed to get them with a working team.</p>
+                <p>TLDR; For the most part, the answer is no.</p>
 
                 <a href="#F2P" id="F2P"><h1>Is this game F2P?</h1></a>
                 <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit.</p>
-                <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool that won't replace your primary units during end game.</p>
+                <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool during end game.</p>
 
                 <a href="#GFL2" id="GFL2"><h1>I've heard news about GFL2. Is GFL1 going to be phased out?</h1></a>
                 <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
