--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -142,7 +142,7 @@
 
                 <a href="#focus" id="focus"><h1>What should I focus on as a beginner?</h1></a>
                 <ul>
-                    <li>2 ARSMG to help in clearing events, 2 RFHG for anti-armor, and 1 MGSG for special fights</li>
+                    <li>2 ARSMG for general content, 2 RFHG for late-game, and 1 MGSG for specialized enemies</li>
                     <li>8 echelons, where 4 are in permanent logistics</li>
                     <li>Forward Basecamp for passive CR and core income</li>
                     <li>3-4 dorms for battery generation</li>
