--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -54,6 +54,7 @@
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <p>In terms of catching up, there are in-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls, your main fighting force, and Protocol Assimilation for steamrolling early to mid-game content. There's also Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</p>
                 <p>For contents, the only permanently missable ones are mainly minigame cosmetics only. Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not gamebreaking).</p>
+                <p>With stamina, there is no stamina. But it has an equivalent in Manpower, Ammunition, Ration, and Part resources which can be gathered in bulk indefinitely.</p>
                 <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>
 
                 <a href="#engage" id="engage"><h1>How much daily engagement does this game need?</h1></a>
@@ -142,7 +143,12 @@
 
                 <a href="#focus" id="focus"><h1>What should I focus on as a beginner?</h1></a>
                 <ul>
-                    <li>2 ARSMG for general content, 2 RFHG for late-game, and 1 MGSG for specialized enemies</li>
+                    <li>
+                        <details>
+                            <summary>2 ARSMG for general content</summary>
+                            Common first team is M4A1, ST AR-15, M4 SOPMOD II, UMP45, Skorpion
+                        </details>, 2 RFHG for late-game, and 1 MGSG for specialized enemies
+                    </li>
                     <li>8 echelons, where 4 are in permanent logistics</li>
                     <li>Forward Basecamp for passive CR and core income</li>
                     <li>3-4 dorms for battery generation</li>
