--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -143,12 +143,7 @@
 
                 <a href="#focus" id="focus"><h1>What should I focus on as a beginner?</h1></a>
                 <ul>
-                    <li>
-                        <details>
-                            <summary>2 ARSMG for general content</summary>
-                            Common first team is M4A1, ST AR-15, M4 SOPMOD II, UMP45, Skorpion
-                        </details>, 2 RFHG for late-game, and 1 MGSG for specialized enemies
-                    </li>
+                    <li>2 ARSMG for general content (Common first team is M4A1, ST AR-15, M4 SOPMOD II, UMP45, Skorpion), 2 RFHG for late-game, and 1 MGSG for specialized enemies</li>
                     <li>8 echelons, where 4 are in permanent logistics</li>
                     <li>Forward Basecamp for passive CR and core income</li>
                     <li>3-4 dorms for battery generation</li>
