--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -71,8 +71,8 @@
                 <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit.</p>
                 <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool during end game.</p>
 
-                <a href="#GFL2" id="GFL2"><h1>I've heard news about GFL2. Is GFL1 going to be phased out?</h1></a>
-                <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
+                <a href="#phasing" id="phasing"><h1>I heard they made new games of the same series. Is GFL1 going to be phased out?</h1></a>
+                <p>Not anytime soon considering that 3.0 client (which is a big investment just to shutdown in a year) is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
                 <table>
                     <thead>
                         <tr>
@@ -89,8 +89,13 @@
                         </tr>
                         <tr>
                             <td>GFL2: Exillium</td>
-                            <td>XCOM/FE-like</td>
+                            <td>XCOM/TRPG</td>
                             <td>2070s</td>
+                        </tr>
+                        <tr>
+                            <td>GFL: Neural Cloud</td>
+                            <td>Rougelite<br>Auto-chess</td>
+                            <td>2060</td>
                         </tr>
                     </tbody>
                 </table>
