--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -57,6 +57,10 @@
                 <p>With stamina, there is no stamina. But it has an equivalent in Manpower, Ammunition, Ration, and Part resources which can be gathered in bulk indefinitely.</p>
                 <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>
 
+                <a href="#pvp" id="pvp"><h1>Is there PVP in this game?</h1></a>
+                <p>There are two kinds of PVP in this game, the highscore leaderboards type (Theater and Event Ranking Maps) and direct (Luffberry Chess).</p>
+                <p>If you're looking for a more traditional PVP, luckily/unluckily this game doesn't have it.</p>
+
                 <a href="#engage" id="engage"><h1>How much daily engagement does this game need?</h1></a>
                 <p>Minimal. Resources for pulls are generated passively. Events are months apart aka big bursts in-between lulls (in comparison to usual mobages).</p>
 
