--- a/GFL/index.html
+++ b/GFL/index.html
@@ -60,6 +60,7 @@
                 <div id="input-type-container">
                     <label class="flex-label checked"><input type="radio" name="input-type" onclick="toggleInput(this)" value="search" checked><h2>Keyword</h2></label>
                     <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput(this)" value="tags"><h2>Tags</h2></label>
+                    <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput(this)" value="browse"><h2>Browse</h2></label>
                 </div>
 
                 <form>
@@ -68,6 +69,10 @@
                     <input type="text" id="search-text" placeholder="Search..." name="search">
                     <input type="submit">
                 </form>
+
+                <div>
+                    
+                </div>
 
                 <div id="cards-field"></div>
             </section>
