--- a/GFL/index.html
+++ b/GFL/index.html
@@ -63,15 +63,15 @@
                     <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput(this)" value="browse"><h2>Browse</h2></label>
                 </div>
 
-                <form>
+                <form id="submission-form">
                     <div id="tags-list"></div>
 
                     <input type="text" id="search-text" placeholder="Search..." name="search">
                     <input type="submit">
                 </form>
 
-                <div>
-                    
+                <div id="browse-page">
+                    <!-- first prev pageno next last -->
                 </div>
 
                 <div id="cards-field"></div>
