--- a/GFL/index.html
+++ b/GFL/index.html
@@ -73,7 +73,7 @@
                 <div id="browse-page">
                     <button type="button" onclick="changePage(this)" value="first">First</button>
                     <button type="button" onclick="changePage(this)" value="previous">Prev</button>
-                    <span id="page-no"></span>
+                    <span id="page-no">0</span>
                     <button type="button" onclick="changePage(this)" value="next">Next</button>
                     <button type="button" onclick="changePage(this)" value="last">Last</button>
                 </div>
