--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
 
         <div class="container">
             <section id="main_content">
-                <!--blockquote class="twitter-tweet">
+                <blockquote class="twitter-tweet" style="max-width: 100%;">
                     <p lang="en" dir="ltr">We modified some names to avoid licensing risk. We thank you for your understanding.</p>
                     &mdash; Girls&#39; Frontline-EN Official (@GirlsFrontlineE)
                     <a href="https://twitter.com/GirlsFrontlineE/status/1001058278728548354?ref_src=twsrc%5Etfw">May 28, 2018</a>
-                </blockquote-->
-                <a class="twitter-timeline" data-width="250" data-height="1000" href="https://twitter.com/GirlsFrontlineE?ref_src=twsrc%5Etfw"></a>
-                <a class="twitter-timeline" data-width="250" data-height="1000" href="https://twitter.com/GirlsFrontlineE/status/1001058278728548354?ref_src=twsrc%5Etfw"></a>
+                </blockquote>
 
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </section>
