--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <style>
         .twitter-tweet {
-            width: 100vw !important;
+            max-width: calc(100%-10px) !important;
         }
     </style>
 
@@ -50,7 +50,7 @@
 
         <div class="container">
             <section id="main_content">
-                <blockquote class="twitter-tweet" style="max-width: 100%;">
+                <blockquote class="twitter-tweet">
                     <p lang="en" dir="ltr">We modified some names to avoid licensing risk. We thank you for your understanding.</p>
                     &mdash; Girls&#39; Frontline-EN Official (@GirlsFrontlineE)
                     <a href="https://twitter.com/GirlsFrontlineE/status/1001058278728548354?ref_src=twsrc%5Etfw">May 28, 2018</a>
