--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="container">
             <section id="main_content">
                 <blockquote class="twitter-tweet">
-                    <p lang="en" dir="ltr">We modified some names to avoid licensing risk. We thank you for your understanding.</p>
-                    &mdash; Girls&#39; Frontline-EN Official (@GirlsFrontlineE)
-                    <a href="https://twitter.com/GirlsFrontlineE/status/1001058278728548354?ref_src=twsrc%5Etfw">May 28, 2018</a>
+                    <!-- <p lang="en" dir="ltr">We modified some names to avoid licensing risk. We thank you for your understanding.</p>
+                    &mdash; Girls&#39; Frontline-EN Official (@GirlsFrontlineE) -->
+                    <a href="https://twitter.com/GirlsFrontlineE/status/1001058278728548354?ref_src=twsrc%5Etfw">Source Tweet<!-- May 28, 2018 --></a>
                 </blockquote>
 
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
