--- a/GFL/index.html
+++ b/GFL/index.html
@@ -11,7 +11,7 @@
         <!-- Some GDoc fails to load and reloading it blanks the whole page. -->
         <!-- script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script -->
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
-        <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <!-- <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
         <script type="module" src="./indexscript.js"></script>
         
         <meta charset='utf-8'>
