--- a/GFL/index.html
+++ b/GFL/index.html
@@ -82,5 +82,7 @@
                 <div id="cards-field"></div>
             </section>
         </div>
+
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </body>
 </html>
