--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -35,6 +35,8 @@
 
             <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
         <!-- end custom head snippets -->
+
+        <title>Elite Units | Random Scraps</title>
     </head>
 
     <body>
