--- a/GFL/index.html
+++ b/GFL/index.html
@@ -32,6 +32,8 @@
 
             <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
         <!-- end custom head snippets -->
+
+        <title>GFL FAQs | Random Scraps</title>
     </head>
 
     <body>
