--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -21,6 +21,8 @@
 
             <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
         <!-- end custom head snippets -->
+
+        <title>Starter Guide | Random Scraps</title>
     </head>
 
     <style>
