--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
             <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
         <!-- end custom head snippets -->
+
+        <title>Random Scraps</title>
     </head>
 
     <body>
