--- a/index.html
+++ b/index.html
@@ -25,22 +25,30 @@
         <title>Random Scraps</title>
     </head>
 
+    <style>
+        #reddit-embed {
+            border: none;
+            height: auto;
+            width: 100%;
+        }
+    </style>
+
     <body>
         <include src="/univasset/scripts/pageheader/header.html">"Welcome to the Main Page"</include>
 
         <div class="container">
             <section id="main_content">
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0wr7x1/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="1062" width="640" scrolling="no"></iframe>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0wr7x1/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/t42t86/weekly_commanders_lounge_march_01_2022/hz2dti3/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="435" width="640" scrolling="no"></iframe>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/t42t86/weekly_commanders_lounge_march_01_2022/hz2dti3/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg41790/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="259" width="640" scrolling="no"></iframe>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg41790/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/mgausk/weekly_commanders_lounge_march_30_2021/gsxx3gr/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="199" width="640" scrolling="no"></iframe>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/mgausk/weekly_commanders_lounge_march_30_2021/gsxx3gr/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg4vntx/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="199" width="640" scrolling="no"></iframe>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg4vntx/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/qkzc9s/weekly_commanders_lounge_november_02_2021/hjecs3p/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="259" width="640" scrolling="no"></iframe>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/qkzc9s/weekly_commanders_lounge_november_02_2021/hjecs3p/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
             </section>
         </div>
     </body>
