--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 
         <div class="container">
             <section id="main_content">
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0wr7x1/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
+                showmore<br>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0wr7x1/?depth=1&amp;showmore=true&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/t42t86/weekly_commanders_lounge_march_01_2022/hz2dti3/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
+                no same origin<br>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/t42t86/weekly_commanders_lounge_march_01_2022/hz2dti3/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-popups" scrolling="no"></iframe>
 
                 <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg41790/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
 
