--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
                 no same origin<br>
                 <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/t42t86/weekly_commanders_lounge_march_01_2022/hz2dti3/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-popups" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg41790/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
+                no popup<br>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg41790/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/mgausk/weekly_commanders_lounge_march_30_2021/gsxx3gr/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
+                no script<br>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/mgausk/weekly_commanders_lounge_march_30_2021/gsxx3gr/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-same-origin allow-popups" scrolling="no"></iframe>
 
-                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg4vntx/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
+                no sandbox<br>
+                <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/q1rscp/weekly_commanders_lounge_october_05_2021/hg4vntx/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" scrolling="no"></iframe>
 
                 <iframe id="reddit-embed" src="https://www.redditmedia.com/r/girlsfrontline/comments/qkzc9s/weekly_commanders_lounge_november_02_2021/hjecs3p/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" scrolling="no"></iframe>
             </section>
