--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         <div class="container">
             <section id="main_content">
+                If you've got Comments, Suggestions, or Violent Reactions, do it <a href="https://redd.it/yj55t3">here</a>.
             </section>
         </div>
     </body>
