--- a/PNC/index.html
+++ b/PNC/index.html
@@ -110,8 +110,8 @@
                         <tr>
                             <td>Percentage</td>
                             <td>12%</td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
-                            <td></td>    <!-- Offense 1 Slot Main Stat -->
+                            <td>7.2%</td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>6%</td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
@@ -127,7 +127,7 @@
                             <td>Flat</td>
                             <td>54</td>    <!-- Offense 2 Slot Main Stat -->
                             <td></td>    <!-- Offense 2 Slot Sub Stat -->
-                            <td></td>    <!-- Offense 1 Slot Main Stat -->
+                            <td>27</td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
@@ -140,7 +140,7 @@
                         </tr>
                         <tr>
                             <td>Percentage</td>
-                            <td></td>    <!-- Offense 2 Slot Main Stat -->
+                            <td>12%</td>    <!-- Offense 2 Slot Main Stat -->
                             <td>7.2%</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td>6%</td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
@@ -175,13 +175,13 @@
                             <td></td>    <!-- Offense 2 Slot Sub Stat -->
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
-                            <td></td>    <!-- Stability 2 Slot Main Stat -->
+                            <td>7.2%</td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
                             <td>3.6%</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>7.2%</td>    <!-- Special 2 Slot Main Stat -->
                             <td></td>    <!-- Special 2 Slot Sub Stat -->
-                            <td></td>    <!-- Special 1 Slot Main Stat -->
+                            <td>3.6%</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
                         <tr>
@@ -208,7 +208,7 @@
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>7.2%</td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
-                            <td></td>    <!-- Stability 1 Slot Main Stat -->
+                            <td>3.6%</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>7.2%</td>    <!-- Special 2 Slot Main Stat -->
                             <td></td>    <!-- Special 2 Slot Sub Stat -->
@@ -312,8 +312,8 @@
                             <td rowspan="2">Physical Penetration</td>
                             <td>Flat</td>
                             <td>20</td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
-                            <td></td>    <!-- Offense 1 Slot Main Stat -->
+                            <td>12</td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>10</td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
@@ -328,7 +328,7 @@
                             <td>Percentage</td>
                             <td>7.2%</td>    <!-- Offense 2 Slot Main Stat -->
                             <td></td>    <!-- Offense 2 Slot Sub Stat -->
-                            <td></td>    <!-- Offense 1 Slot Main Stat -->
+                            <td>3.6%</td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
@@ -357,7 +357,7 @@
                         </tr>
                         <tr>
                             <td>Percentage</td>
-                            <td></td>    <!-- Offense 2 Slot Main Stat -->
+                            <td>7.2%</td>    <!-- Offense 2 Slot Main Stat -->
                             <td></td>    <!-- Offense 2 Slot Sub Stat -->
                             <td>3.6%</td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
