--- a/PNC/index.html
+++ b/PNC/index.html
@@ -68,7 +68,7 @@
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>1800</td>    <!-- Stability 2 Slot Main Stat -->
-                            <td></td>    <!-- Stability 2 Slot Sub Stat -->
+                            <td>1080</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td>900</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
@@ -95,7 +95,7 @@
                             <td rowspan="2">ATK</td>
                             <td>Flat</td>
                             <td>54</td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>32</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td>27</td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
@@ -126,7 +126,7 @@
                             <td rowspan="2">Hashrate</td>
                             <td>Flat</td>
                             <td>54</td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>32</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td>27</td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
@@ -134,7 +134,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>32</td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -273,7 +273,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>8%</td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>4.8%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>4%</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -397,7 +397,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>3.9%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -475,7 +475,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>30</td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -544,7 +544,7 @@
                         <tr>
                             <td>Percentage</td>
                             <td></td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>3.9%</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
@@ -579,7 +579,7 @@
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
-                            <td></td>    <!-- Stability 2 Slot Sub Stat -->
+                            <td>3.9%</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
