--- a/PNC/index.html
+++ b/PNC/index.html
@@ -188,7 +188,7 @@
                             <td rowspan="2">Operand DEF</td>
                             <td>Flat</td>
                             <td></td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>33</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>56</td>    <!-- Stability 2 Slot Main Stat -->
@@ -443,7 +443,7 @@
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
-                            <td>8%</td>    <!-- Special 2 Slot Main Stat -->
+                            <td></td>    <!-- Special 2 Slot Main Stat -->
                             <td></td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
@@ -458,7 +458,7 @@
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
-                            <td></td>    <!-- Special 2 Slot Main Stat -->
+                            <td>8%</td>    <!-- Special 2 Slot Main Stat -->
                             <td></td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
