--- a/PNC/index.html
+++ b/PNC/index.html
@@ -460,14 +460,14 @@
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>8%</td>    <!-- Special 2 Slot Main Stat -->
                             <td></td>    <!-- Special 2 Slot Sub Stat -->
-                            <td></td>    <!-- Special 1 Slot Main Stat -->
+                            <td>4%</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
                         <tr>
                             <td rowspan="2">Debuff Resistance</td>
                             <td>Flat</td>
                             <td></td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>30</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
