--- a/PNC/index.html
+++ b/PNC/index.html
@@ -103,7 +103,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>32</td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -211,7 +211,7 @@
                             <td>3.6%</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>7.2%</td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>3.3%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>3.6%</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -459,7 +459,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>8%</td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>4.8%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>4%</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
